# game

./: Cargo.toml
New folder/: client.new.rs  server.new.rs  settings.new.rs
assets/: settings.ron
assets/models/: female.glb
src/: camera_pan_orbit.rs  client.rs  main.rs  protocol.rs  settings.rs
