[package]
name = "game"
version = "0.1.0"
authors = ["David Leeper <davidkleeper@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "A game built using the Bevy game engine"
readme = "README.md"
repository = "https://github.com/dave-leeper/game"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
publish = false

[features]
metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
mock_time = ["lightyear/mock_time"]

[dependencies]
async-compat = "0.2.3"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = { version = "1.0.75", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
bevy = { version = "0.13", features = ["bevy_core_pipeline"] }
derive_more = { version = "0.99", features = ["add", "mul"] }
rand = "0.8.1"
clap = { version = "4.4", features = ["derive"] }
mock_instant = "0.3"
metrics-exporter-prometheus = { version = "0.13.0", optional = true }
bevy-inspector-egui = "0.23"
cfg-if = "1.0.0"
crossbeam-channel = "0.5.11"
wasm-bindgen = { version = "0.2.92", optional = true }
lightyear = { version = "0.13.0", features = [
  "webtransport",
  "websocket",
  "render",
  "steam",
]}

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
